marble: Build Lineage Health HAL
Enables charging control options.

Co-authored-by: Fabian Leutenegger <fabian.leutenegger@bluewin.ch>
Change-Id: I0a5888c9f2f62b732ab1659f72d64e1572ee7795
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/rootdir/etc/init.marble.rc
+++ b/rootdir/etc/init.marble.rc
@@ -30,6 +30,10 @@ on boot
     chmod 0664 /sys/bus/platform/devices/soc:xiaomi_fingerprint/fingerdown
     chown system graphics /sys/bus/platform/devices/soc:xiaomi_fingerprint/fingerdown
 
+    # Charging
+    chown system system /sys/class/qcom-battery/input_suspend
+    chmod 0660 /sys/class/qcom-battery/input_suspend
+
 on post-fs
     chown system system /sys/class/backlight/panel0-backlight/brightness
     chown system system /sys/class/backlight/panel0-backlight/max_brightness
